fix: menu entry is visible when no user is connected

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-div.menu-wrapper {
+nav {
 	ul.cleanup-unviewed-videos.menu-block {
 		display: none;
 	}
